--- a/turios/build.gradle
+++ b/turios/build.gradle
@@ -21,12 +21,14 @@ buildscript {
 
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.turios"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 23
+        versionCode 205
+        versionName "2.0.5"
     }
     buildTypes {
         release {
@@ -41,17 +43,15 @@ android {
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':androidmapsextensions')
-    compile project(':numberPickerCompatLibrary')
-    compile project(':switchCompatLibrary')
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-location:6.5.87'
 
-//    compile 'com.google.android.gms:play-services-maps:10.2.4'
-//    compile 'com.google.android.gms:play-services-location:10.2.4'
     compile 'com.parse:parse-android:1.15.6'
     compile 'com.squareup:javawriter:2.5.1'
     compile 'javax.inject:javax.inject:1'
