--- a/turios/src/main/AndroidManifest.xml
+++ b/turios/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.turios"
-    android:versionCode="200"
-    android:versionName="2.0.0">
-
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="19" />
+    package="com.turios">
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -29,7 +23,6 @@
 
     <supports-screens android:xlargeScreens="true"></supports-screens>
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".activities.TuriosApplication"
